# Pipeline-2.0_knowledge_transfered

./: README.md  README_emon.md  docker-compose.yaml
model_service/: Dockerfile  README.md  main.py  requirements.txt
model_service/consumer/: __init__.py  mongo_consumer.py
model_service/postprocess/: postprocess_strategy.py
preprocessor_service/: README.md  main.py  pipeline.py  requirements.txt
preprocessor_service/consumer/: __init__.py  consumer.py  kafka_consumer.py
preprocessor_service/preprocess/: __init__.py  preprocessor.py
preprocessor_service/preprocess/object_detection/: YOLO.py  __init__.py
preprocessor_service/producer/: __init__.py  mongo_producer.py  producer.py  utils.py
stream-service/: CMakeLists.txt  Dockerfile  README.md  run_stream_service.sh
stream-service/include/camera/: CMakeLists.txt  camera.cpp  camera.h  camera_builder.hpp
stream-service/include/producer/: CMakeLists.txt  kafka_producer.cpp  kafka_producer.h
stream-service/src/: main.cpp
